# mcpserverdev

./: .env.example  .gitignore  README.md  TROUBLESHOOTING.md  docker-compose.yml
.github/workflows/: build-and-smoketest.yml
deploy/systemd/: mcpserver.service
docker/: docker-compose.prod.yml  nginx.conf
registry/: Dockerfile  main.py
server/: Dockerfile  pyproject.toml
server/src/app/: main.py
