[tool.poetry]
name = "mcp-supercharger"
version = "0.1.0"
description = "A production-ready MCP server with web search, vector DB, and filesystem tools."
authors = ["Devin AI"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.1.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
qdrant-client = "^1.11.3"
redis = "^5.0.7"
duckduckgo-search = "^6.2.9"
tavily-python = "^0.5.0"
openai = "^1.52.2"
sentence-transformers = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
ruff = "^0.5.6"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
